Pushing v101 from API 5f04e80b43935aeb763fffb4ee77fd5821bb5bd5

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4309,6 +4309,7 @@ paths:
 
               If you have a need for a routing model that isn't covered above, please don't hesitate
               to reach out to our team.
+            example: care_team_preferred
           required: false
           description: >-
             Defines how an incoming slot availability query should be routed to possible users.
@@ -4345,6 +4346,68 @@ paths:
 
             If you have a need for a routing model that isn't covered above, please don't hesitate
             to reach out to our team.
+        - in: query
+          style: form
+          explode: true
+          name: rescheduling_appointment
+          schema:
+            type: string
+            example: appt_mTvufYJBBgYmbEAEZ6rE
+            description: >-
+              Identifier of the appointment that is being rescheduled. When provided, Source makes a
+              few changes to availability calculation:
+
+
+              - Source assumes the duration of the appointment should remain the same, and thus will
+              look for slots matching the appointment's current   duration, rather than the
+              appointment type's duration (which is the default behavior). - Source will ignore the
+              appointment when looking for conflicts, allowing you to rebook the same slot or a slot
+              which overlaps with the   appointment's current time window.
+
+
+              You should only provide rescheduling_appointment when you intend to update an existing
+              appointment, rather than to book a new appointment.
+          required: false
+          description: >-
+            Identifier of the appointment that is being rescheduled. When provided, Source makes a
+            few changes to availability calculation:
+
+
+            - Source assumes the duration of the appointment should remain the same, and thus will
+            look for slots matching the appointment's current   duration, rather than the
+            appointment type's duration (which is the default behavior). - Source will ignore the
+            appointment when looking for conflicts, allowing you to rebook the same slot or a slot
+            which overlaps with the   appointment's current time window.
+
+
+            You should only provide rescheduling_appointment when you intend to update an existing
+            appointment, rather than to book a new appointment.
+        - in: query
+          style: form
+          explode: true
+          name: duration
+          schema:
+            type: number
+            minimum: 5
+            maximum: 360
+            description: >-
+              The duration of the appointment to book, in minutes. By default, Source will use
+              either the appointment type's duration or, if provided, the rescheduling appointment's
+              duration. However, you may specify an alternative duration here to calculate slots for
+              an appointment of a different length.
+
+
+              Must be a number between 5 and 360 minutes (6 hours).
+            example: 30
+          required: false
+          description: >-
+            The duration of the appointment to book, in minutes. By default, Source will use either
+            the appointment type's duration or, if provided, the rescheduling appointment's
+            duration. However, you may specify an alternative duration here to calculate slots for
+            an appointment of a different length.
+
+
+            Must be a number between 5 and 360 minutes (6 hours).
       responses:
         default:
           description: Successful response.
