Pushing v103 from API fcc45f6d782572b7feed6b306b330f8613a9b165

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2696,6 +2696,20 @@ paths:
                         description:
                           Unique ID of the resource to be attached to this message. When attaching a
                           file, this should be set to the uploaded file's ID.
+                      metadata:
+                        type: object
+                        additionalProperties: {}
+                        description: >-
+                          A map of your own metadata to be included alongside this attachment. For
+                          example, you can use this metadata for  bookkeeping or rendering in your
+                          member experience.
+
+
+                          Metadata may only be set when calling the API with your API keys. It
+                          cannot be set when using member tokens.
+                        example:
+                          patient_id: 456789
+                          visit_id: "123"
                     required:
                       - type
                       - resource
@@ -5355,6 +5369,20 @@ paths:
                             description:
                               Unique ID of the resource to be attached to this message. When
                               attaching a file, this should be set to the uploaded file's ID.
+                          metadata:
+                            type: object
+                            additionalProperties: {}
+                            description: >-
+                              A map of your own metadata to be included alongside this attachment.
+                              For example, you can use this metadata for  bookkeeping or rendering
+                              in your member experience.
+
+
+                              Metadata may only be set when calling the API with your API keys. It
+                              cannot be set when using member tokens.
+                            example:
+                              patient_id: 456789
+                              visit_id: "123"
                         required:
                           - type
                           - resource
@@ -7958,11 +7986,25 @@ components:
                   $ref: "#/components/schemas/file"
                 description: The resource which is attached to the message
                 example: file_gdIyXM9d4LKGnewOV4OM
+              metadata:
+                type: object
+                additionalProperties: {}
+                description: >-
+                  A map of your own metadata to be included alongside this attachment. For example,
+                  you can use this metadata for bookkeeping or rendering in your member experience.
+
+
+                  Metadata may only be set when calling the API with your API keys. It cannot be set
+                  when using member tokens.
+                example:
+                  patient_id: 456789
+                  visit_id: "123"
             required:
               - type
               - description
               - url
               - resource
+              - metadata
           description: Any attachments to the message, such as files.
         impersonated_by:
           type: string
@@ -8791,11 +8833,26 @@ components:
                       $ref: "#/components/schemas/file"
                     description: The resource which is attached to the message
                     example: file_gdIyXM9d4LKGnewOV4OM
+                  metadata:
+                    type: object
+                    additionalProperties: {}
+                    description: >-
+                      A map of your own metadata to be included alongside this attachment. For
+                      example, you can use this metadata for bookkeeping or rendering in your member
+                      experience.
+
+
+                      Metadata may only be set when calling the API with your API keys. It cannot be
+                      set when using member tokens.
+                    example:
+                      patient_id: 456789
+                      visit_id: "123"
                 required:
                   - type
                   - description
                   - url
                   - resource
+                  - metadata
               description: Any attachments to the message, such as files.
             sender:
               anyOf:
