Pushing v105 from API f12c8ead2bea7bd4377bfad4987967b8b43c5bf2

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4547,6 +4547,9 @@ paths:
                   type: string
                   enum:
                     - open
+                    - in_progress
+                    - blocked
+                    - on_hold
                     - resolved
                   description: The status of the task
                   example: open
@@ -4666,6 +4669,9 @@ paths:
               type: string
               enum:
                 - open
+                - in_progress
+                - blocked
+                - on_hold
                 - resolved
             description:
               Filter results by status. If multiple statuses are provided, tasks matching any of the
@@ -4898,6 +4904,9 @@ paths:
                   type: string
                   enum:
                     - open
+                    - in_progress
+                    - blocked
+                    - on_hold
                     - resolved
                   description: The status of the task
                   example: open
@@ -8597,6 +8606,9 @@ components:
           type: string
           enum:
             - open
+            - in_progress
+            - blocked
+            - on_hold
             - resolved
           description: Status the task is currently in
           example: open
