Pushing v106 from API ec5d9cde17e53b00b89ccb411e50b49e61ff953b

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -7064,8 +7064,8 @@ components:
             required:
               - user
           description:
-            The users on the care team. The user's care team role defines their role across all
-            teams they are on.
+            The ordered list of users on the care team. The user's care team role defines their role
+            across all teams they are on.
           example: []
         created_at:
           type: string
