--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -892,6 +892,59 @@ paths:
                     appointments at any time, including appointments in the past. Measured in
                     minutes.
                   example: 60
+                routing_strategy:
+                  type: string
+                  enum:
+                    - care_team_required
+                    - care_team_preferred
+                    - care_team_hybrid
+                    - round_robin
+                  description: >-
+                    Defines how an incoming slot availability query for the appointment type should
+                    be routed to possible users. Because of the complexity in routing, it's best
+                    explained by example. Assume you have created an appointment type that can be
+                    fulfilled by users in the Physicians group. The behavior of each routing
+                    strategy is as follows:
+
+
+                    - care_team_required - Appointment slots will only be shown for Physicians who
+                    are on the member's care team. If there are   no Physicians on the member's care
+                    team, the request will fail.
+
+
+                    - care_team_preferred - Appointment slots will be shown for all Physicians on
+                    the member's care team, if there are any. If   there are no Physicians on the
+                    member's care team, slots will be shown for all Physicians.
+
+
+                    - care_team_hybrid - Appointment slots will be shown for all users in the
+                    Physicians group. For any given appointment slot,   if a Physician of the
+                    member's care team is available, they will be preferred. However, slots for
+                    other Physicians will   still be shown.
+
+
+                    - round_robin - Appointment slots will be shown for all users in the Physicians
+                    group, and no preference will be given to   users who are also on the member's
+                    care team.
+
+
+                    By default, Source uses the care_team_preferred strategy to provide continuity
+                    of care and ensure patients have a consistent experience. However, this is not
+                    always the right booking strategy for all practices. In fact, even for a single
+                    practice, you may sometimes need to reach for another routing method.
+
+
+                    If you have a need for a routing model that isn't covered above, please don't
+                    hesitate to reach out to our team.
+                  example: care_team_preferred
+                groups:
+                  type: array
+                  items:
+                    type: string
+                    example: grp_IlGhgsstvgsagl6lV89Q
+                  description: care_team_preferred
+                  example:
+                    - grp_IlGhgsstvgsagl6lV89Q
                 video_enabled:
                   type: boolean
                   description:
@@ -1227,6 +1280,59 @@ paths:
                     appointments at any time, including appointments in the past. Measured in
                     minutes.
                   example: 60
+                routing_strategy:
+                  type: string
+                  enum:
+                    - care_team_required
+                    - care_team_preferred
+                    - care_team_hybrid
+                    - round_robin
+                  description: >-
+                    Defines how an incoming slot availability query for the appointment type should
+                    be routed to possible users. Because of the complexity in routing, it's best
+                    explained by example. Assume you have created an appointment type that can be
+                    fulfilled by users in the Physicians group. The behavior of each routing
+                    strategy is as follows:
+
+
+                    - care_team_required - Appointment slots will only be shown for Physicians who
+                    are on the member's care team. If there are   no Physicians on the member's care
+                    team, the request will fail.
+
+
+                    - care_team_preferred - Appointment slots will be shown for all Physicians on
+                    the member's care team, if there are any. If   there are no Physicians on the
+                    member's care team, slots will be shown for all Physicians.
+
+
+                    - care_team_hybrid - Appointment slots will be shown for all users in the
+                    Physicians group. For any given appointment slot,   if a Physician of the
+                    member's care team is available, they will be preferred. However, slots for
+                    other Physicians will   still be shown.
+
+
+                    - round_robin - Appointment slots will be shown for all users in the Physicians
+                    group, and no preference will be given to   users who are also on the member's
+                    care team.
+
+
+                    By default, Source uses the care_team_preferred strategy to provide continuity
+                    of care and ensure patients have a consistent experience. However, this is not
+                    always the right booking strategy for all practices. In fact, even for a single
+                    practice, you may sometimes need to reach for another routing method.
+
+
+                    If you have a need for a routing model that isn't covered above, please don't
+                    hesitate to reach out to our team.
+                  example: care_team_preferred
+                groups:
+                  type: array
+                  items:
+                    type: string
+                    example: grp_IlGhgsstvgsagl6lV89Q
+                  description: care_team_preferred
+                  example:
+                    - grp_IlGhgsstvgsagl6lV89Q
                 video_enabled:
                   type: boolean
                   description:
@@ -4302,78 +4408,16 @@ paths:
               - care_team_preferred
               - care_team_hybrid
               - round_robin
-            description: >-
-              Defines how an incoming slot availability query should be routed to possible users.
-              Because of the complexity in routing, it's best explained by example. Assume you have
-              created an appointment type that can be fulfilled by users in the Physicians group.
-              The behavior of each routing strategy is as follows:
-
-
-              - care_team_required - Appointment slots will only be shown for Physicians who are on
-              the member's care team. If there are no   Physicians on the member's care team, the
-              request will fail.
-
-
-              - care_team_preferred - Appointment slots will be shown for all Physicians on the
-              member's care team, if there are any. If there   are no Physicians on the member's
-              care team, slots will be shown for all Physicians.
-
-
-              - care_team_hybrid - Appointment slots will be shown for all users in the Physicians
-              group. For any given appointment slot, if a   Physician of the member's care team is
-              available, they will be preferred. However, slots for other Physicians will still be
-              shown.
-
-
-              - round_robin - Appointment slots will be shown for all users in the Physicians group,
-              and no preference will be given to users   who are also on the member's care team.
-
-
-              By default, Source uses the care_team_preferred strategy to provide continuity of care
-              and ensure patients have a consistent experience. However, this is not always the
-              right booking strategy for all practices. In fact, even for a single practice, you may
-              sometimes need to reach for another routing method.
-
-
-              If you have a need for a routing model that isn't covered above, please don't hesitate
-              to reach out to our team.
+            description:
+              Overrides the routing strategy configured on the appointment type. For more
+              information about the available routing strategies and how they work, see the
+              [Appointment Type](/docs/api/reference/appointment-type/) documentation.
             example: care_team_preferred
           required: false
-          description: >-
-            Defines how an incoming slot availability query should be routed to possible users.
-            Because of the complexity in routing, it's best explained by example. Assume you have
-            created an appointment type that can be fulfilled by users in the Physicians group. The
-            behavior of each routing strategy is as follows:
-
-
-            - care_team_required - Appointment slots will only be shown for Physicians who are on
-            the member's care team. If there are no   Physicians on the member's care team, the
-            request will fail.
-
-
-            - care_team_preferred - Appointment slots will be shown for all Physicians on the
-            member's care team, if there are any. If there   are no Physicians on the member's care
-            team, slots will be shown for all Physicians.
-
-
-            - care_team_hybrid - Appointment slots will be shown for all users in the Physicians
-            group. For any given appointment slot, if a   Physician of the member's care team is
-            available, they will be preferred. However, slots for other Physicians will still be
-            shown.
-
-
-            - round_robin - Appointment slots will be shown for all users in the Physicians group,
-            and no preference will be given to users   who are also on the member's care team.
-
-
-            By default, Source uses the care_team_preferred strategy to provide continuity of care
-            and ensure patients have a consistent experience. However, this is not always the right
-            booking strategy for all practices. In fact, even for a single practice, you may
-            sometimes need to reach for another routing method.
-
-
-            If you have a need for a routing model that isn't covered above, please don't hesitate
-            to reach out to our team.
+          description:
+            Overrides the routing strategy configured on the appointment type. For more information
+            about the available routing strategies and how they work, see the [Appointment
+            Type](/docs/api/reference/appointment-type/) documentation.
         - in: query
           style: form
           explode: true
@@ -6790,6 +6834,67 @@ components:
             members are booking appointments directly. Users can book appointments at any time,
             including appointments in the past. Measured in minutes.
           example: 60
+        video_enabled:
+          type: boolean
+          description:
+            Whether or not to create a video call for appointments of this type. Defaults to false.
+          example: false
+        routing_strategy:
+          type: string
+          enum:
+            - care_team_required
+            - care_team_preferred
+            - care_team_hybrid
+            - round_robin
+          description: >-
+            Defines how an incoming slot availability query for the appointment type should be
+            routed to possible users. Because of the complexity in routing, it's best explained by
+            example. Assume you have created an appointment type that can be fulfilled by users in
+            the Physicians group. The behavior of each routing strategy is as follows:
+
+
+            - care_team_required - Appointment slots will only be shown for Physicians who are on
+            the member's care team. If there are   no Physicians on the member's care team, the
+            request will fail.
+
+
+            - care_team_preferred - Appointment slots will be shown for all Physicians on the
+            member's care team, if there are any. If   there are no Physicians on the member's care
+            team, slots will be shown for all Physicians.
+
+
+            - care_team_hybrid - Appointment slots will be shown for all users in the Physicians
+            group. For any given appointment slot,   if a Physician of the member's care team is
+            available, they will be preferred. However, slots for other Physicians will   still be
+            shown.
+
+
+            - round_robin - Appointment slots will be shown for all users in the Physicians group,
+            and no preference will be given to   users who are also on the member's care team.
+
+
+            By default, Source uses the care_team_preferred strategy to provide continuity of care
+            and ensure patients have a consistent experience. However, this is not always the right
+            booking strategy for all practices. In fact, even for a single practice, you may
+            sometimes need to reach for another routing method.
+
+
+            If you have a need for a routing model that isn't covered above, please don't hesitate
+            to reach out to our team.
+          example: care_team_preferred
+        groups:
+          type: array
+          items:
+            oneOf:
+              - type: string
+              - $ref: "#/components/schemas/group"
+            x-expandable:
+              $ref: "#/components/schemas/group"
+            description: Expandable reference to a Group
+            example: grp_IlGhgsstvgsagl6lV89Q
+          description: care_team_preferred
+          example:
+            - grp_IlGhgsstvgsagl6lV89Q
         created_at:
           type: string
           format: date-time
@@ -6800,11 +6905,6 @@ components:
           format: date-time
           description: Timestamp when the appointment type was last updated.
           example: 2021-05-13T16:33:00.000Z
-        video_enabled:
-          type: boolean
-          description:
-            Whether or not to create a video call for appointments of this type. Defaults to false.
-          example: false
       required:
         - object
         - id
@@ -6820,9 +6920,11 @@ components:
         - buffer_after
         - planning_horizon
         - minimum_notice
+        - video_enabled
+        - routing_strategy
+        - groups
         - created_at
         - updated_at
-        - video_enabled
       title: Appointment Type
       description: >-
         Appointment types describe the different types of appointments that members can book with
