Pushing v109 from API 158496d574ce39ca637433b79d5f2b08c0a70622

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -6892,7 +6892,13 @@ components:
               $ref: "#/components/schemas/group"
             description: Expandable reference to a Group
             example: grp_IlGhgsstvgsagl6lV89Q
-          description: care_team_preferred
+          description:
+            Select the groups that should be evaluated when booking an appointment. If no group is
+            specified, you will not be able to use the appointment slot API to find bookable slots.
+            When using the appointment slot API, you can specify more specific users and groups. For
+            example, if your appointment type is linked to the group "Physicians," and when calling
+            the slot API you provide an include parameter for the group "Nurses," you only receive
+            available slots for users who are in both the Physicians and Nurses group.
           example:
             - grp_IlGhgsstvgsagl6lV89Q
         created_at:
